# file-type

./: .gitattributes  .gitignore  Cargo.toml  README.md  browser.js  file-type.wasi-browser.js  file-type.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  simple-test.mjs  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
