[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-file-type"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
file-format = "0.24"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1

[profile.wasi]
inherits = "release"
debug = 'full'
opt-level = 'z'
overflow-checks = false
panic = 'abort'